--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -7,7 +7,7 @@
     <FireBoxRoom>
       <Room use_local_asset="room_plane">
         <% _.forEach(assetLinks, function (link) {
-          %><Link id="<%= link.id %>" pos="<%= link.pos.x %> <%= link.pos.y %> <%= link.pos.z %>" xdir="<%= link.xdir %>" ydir="<%= link.ydir %>" zdir="<%= link.zdir %>" scale="1.8 2.5 1" src="<%= link.url %>" />
+          %><Link id="<%= link.id %>" pos="<%= link.pos.x %> <%= link.pos.y %> <%= link.pos.z %>" xdir="<%= link.xdir %>" ydir="<%= link.ydir %>" zdir="<%= link.zdir %>" scale="1.8 2.5 1" url="<%= link.url %>" />
         <% }); %>
       </Room>
     </FireBoxRoom>
