--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -5,9 +5,9 @@
   <body>
     <%= description %>
     <FireBoxRoom>
-      <Room use_local_asset="room_plane">
+      <Room use_local_asset="room_plane" pos="0 0 10" xdir="-1.00 0.00 -0.00" ydir="0.00 1.00 0.00" zdir="0.00 0.00 -1.00">
         <% _.forEach(assetLinks, function (link) {
-          %><Link id="<%= link.id %>" pos="<%= link.pos.x %> <%= link.pos.y %> <%= link.pos.z %>" xdir="<%= link.xdir %>" ydir="<%= link.ydir %>" zdir="<%= link.zdir %>" scale="1.8 2.5 1" url="<%= link.url %>" />
+          %><Link id="<%= link.id %>" pos="<%= link.pos.x %> <%= link.pos.y %> <%= link.pos.z %>" scale="1.8 2.5 1" url="<%= link.url %>" />
         <% }); %>
       </Room>
     </FireBoxRoom>
